[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-content-extractor"
version = "0.1.0"
description = "Extract text, tables, images, and chart candidates from PDF files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24.0",
  "pdfplumber>=0.11.0",
  "Pillow>=10.0.0",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.10"
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
pdf-extractor = "pdf_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
